energize, decreased scrollbar width, fixed caption wrap

--- a/assets/www/css/style.css
+++ b/assets/www/css/style.css
@@ -298,6 +298,13 @@ ul li h3 {
  }  */
 
 /*.single {
+margin: 0!important;
+padding: 0!important;
+border: 0!important;
+width: 100%;
+height: 100%;
+overflow-y: auto;
+overflow-x: hidden;
  padding: 3 !important;
  }*/
 .single div.iscroll-scroller {
@@ -332,6 +339,19 @@ ul li h3 {
     transform: translate3d(0, 0, 0);
 }
  
+/*.wp-caption-text{
+    width: 15px;
+    white-space:normal;
+}
+em{
+margin: 0!important;
+padding: 0!important;
+border: 0!important;
+width: 100%;
+height: 100%;
+overflow-y: auto;
+overflow-x: hidden;
+}*/
 .page.left {
     -webkit-transform: translate3d(-100%, 0, 0);
     transform: translate3d(-100%, 0, 0);
